[package]
name = "wasm-mt-patch"
version = "0.1.0"
authors = ["The wasm-mt Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/w3reality/wasm-mt"
homepage = "https://github.com/w3reality/wasm-mt"
documentation = "https://docs.rs/wasm-mt"
description = """
A multithreading library for Rust and WebAssembly, patched to handle errors.
"""
edition = "2018"
exclude = [
    "Makefile",
    "header.md",
    "examples/*",
    "tests/*",
]

[lib]
test = false

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies]
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.2"
serde_traitobject = "0.2"
bincode = "1.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'MessageEvent',
  'Response',
  'TextDecoder',
  'TextEncoder',
  'Url',
  'Window',
  'Worker',
  'WorkerGlobalScope',
]
